force-app/main/default/objects/Branch__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>LongTextArea</type>
    <length>32000</length>

</CustomField>