force-app/main/default/objects/Branch__c/fields/Current_Load__c.field-meta.xml
<CustomField>
    <fullName>Current_Load__c</fullName>
    <label>Current Load</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>0</scale>
    <inlineHelpText>This is intended to be a roll-up of active Laundry Orders for the branch. To make a true Roll-Up Summary you must convert Laundry_Order__c.Branch__c to a Master-Detail relationship to Branch__c.</inlineHelpText>

</CustomField>