force-app/main/default/objects/Branch__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Manager</relationshipName>

</CustomField>