force-app/main/default/objects/Branch__c/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <label>Operating Hours</label>
    <type>Text</type>
    <length>255</length>

</CustomField>